src/host/pantilt_in_ada/specs/libusb_1_0_libusb_h.ads


   subtype libusb_capability is unsigned;
   LIBUSB_CAP_HAS_CAPABILITY : constant libusb_capability := 0;
   LIBUSB_CAP_HAS_HOTPLUG : constant libusb_capability := 1;
   LIBUSB_CAP_HAS_HID_ACCESS : constant libusb_capability := 256;
   LIBUSB_CAP_SUPPORTS_DETACH_KERNEL_DRIVER : constant libusb_capability := 257;  -- /usr/include/libusb-1.0/libusb.h:1267

   type libusb_log_level is 
     (LIBUSB_LOG_LEVEL_NONE,
      LIBUSB_LOG_LEVEL_ERROR,
      LIBUSB_LOG_LEVEL_WARNING,
      LIBUSB_LOG_LEVEL_INFO,
      LIBUSB_LOG_LEVEL_DEBUG);
   pragma Convention (C, libusb_log_level);  -- /usr/include/libusb-1.0/libusb.h:1292

   function libusb_init (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1300
   pragma Import (C, libusb_init, "libusb_init");

   procedure libusb_exit (ctx : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1301
   pragma Import (C, libusb_exit, "libusb_exit");

   procedure libusb_set_debug (ctx : System.Address; level : int);  -- /usr/include/libusb-1.0/libusb.h:1302
   pragma Import (C, libusb_set_debug, "libusb_set_debug");

   function libusb_get_version return access constant libusb_version;  -- /usr/include/libusb-1.0/libusb.h:1303
   pragma Import (C, libusb_get_version, "libusb_get_version");

   function libusb_has_capability (capability : stdint_h.uint32_t) return int;  -- /usr/include/libusb-1.0/libusb.h:1304
   pragma Import (C, libusb_has_capability, "libusb_has_capability");

   function libusb_error_name (errcode : int) return Interfaces.C.Strings.chars_ptr;  -- /usr/include/libusb-1.0/libusb.h:1305
   pragma Import (C, libusb_error_name, "libusb_error_name");

   function libusb_setlocale (locale : Interfaces.C.Strings.chars_ptr) return int;  -- /usr/include/libusb-1.0/libusb.h:1306
   pragma Import (C, libusb_setlocale, "libusb_setlocale");

   function libusb_strerror (errcode : libusb_error) return Interfaces.C.Strings.chars_ptr;  -- /usr/include/libusb-1.0/libusb.h:1307
   pragma Import (C, libusb_strerror, "libusb_strerror");

   function libusb_get_device_list (ctx : System.Address; list : System.Address) return stdio_h.ssize_t;  -- /usr/include/libusb-1.0/libusb.h:1309
   pragma Import (C, libusb_get_device_list, "libusb_get_device_list");

   procedure libusb_free_device_list (list : System.Address; unref_devices : int);  -- /usr/include/libusb-1.0/libusb.h:1311
   pragma Import (C, libusb_free_device_list, "libusb_free_device_list");

   function libusb_ref_device (dev : System.Address) return System.Address;  -- /usr/include/libusb-1.0/libusb.h:1313
   pragma Import (C, libusb_ref_device, "libusb_ref_device");

   procedure libusb_unref_device (dev : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1314
   pragma Import (C, libusb_unref_device, "libusb_unref_device");

   function libusb_get_configuration (dev : System.Address; config : access int) return int;  -- /usr/include/libusb-1.0/libusb.h:1316
   pragma Import (C, libusb_get_configuration, "libusb_get_configuration");

   function libusb_get_device_descriptor (dev : System.Address; desc : access libusb_device_descriptor) return int;  -- /usr/include/libusb-1.0/libusb.h:1318
   pragma Import (C, libusb_get_device_descriptor, "libusb_get_device_descriptor");

   function libusb_get_active_config_descriptor (dev : System.Address; config : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1320
   pragma Import (C, libusb_get_active_config_descriptor, "libusb_get_active_config_descriptor");

   function libusb_get_config_descriptor
     (dev : System.Address;
      config_index : stdint_h.uint8_t;
      config : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1322
   pragma Import (C, libusb_get_config_descriptor, "libusb_get_config_descriptor");

   function libusb_get_config_descriptor_by_value
     (dev : System.Address;
      bConfigurationValue : stdint_h.uint8_t;
      config : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1324
   pragma Import (C, libusb_get_config_descriptor_by_value, "libusb_get_config_descriptor_by_value");

   procedure libusb_free_config_descriptor (config : access libusb_config_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1326
   pragma Import (C, libusb_free_config_descriptor, "libusb_free_config_descriptor");

   function libusb_get_ss_endpoint_companion_descriptor
     (ctx : System.Address;
      endpoint : access constant libusb_endpoint_descriptor;
      ep_comp : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1328
   pragma Import (C, libusb_get_ss_endpoint_companion_descriptor, "libusb_get_ss_endpoint_companion_descriptor");

   procedure libusb_free_ss_endpoint_companion_descriptor (ep_comp : access libusb_ss_endpoint_companion_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1332
   pragma Import (C, libusb_free_ss_endpoint_companion_descriptor, "libusb_free_ss_endpoint_companion_descriptor");

   function libusb_get_bos_descriptor (handle : System.Address; bos : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1334
   pragma Import (C, libusb_get_bos_descriptor, "libusb_get_bos_descriptor");

   procedure libusb_free_bos_descriptor (bos : access libusb_bos_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1336
   pragma Import (C, libusb_free_bos_descriptor, "libusb_free_bos_descriptor");

   function libusb_get_usb_2_0_extension_descriptor
     (ctx : System.Address;
      dev_cap : access libusb_bos_dev_capability_descriptor;
      usb_2_0_extension : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1337
   pragma Import (C, libusb_get_usb_2_0_extension_descriptor, "libusb_get_usb_2_0_extension_descriptor");

   procedure libusb_free_usb_2_0_extension_descriptor (usb_2_0_extension : access libusb_usb_2_0_extension_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1341
   pragma Import (C, libusb_free_usb_2_0_extension_descriptor, "libusb_free_usb_2_0_extension_descriptor");

   function libusb_get_ss_usb_device_capability_descriptor
     (ctx : System.Address;
      dev_cap : access libusb_bos_dev_capability_descriptor;
      ss_usb_device_cap : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1343
   pragma Import (C, libusb_get_ss_usb_device_capability_descriptor, "libusb_get_ss_usb_device_capability_descriptor");

   procedure libusb_free_ss_usb_device_capability_descriptor (ss_usb_device_cap : access libusb_ss_usb_device_capability_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1347
   pragma Import (C, libusb_free_ss_usb_device_capability_descriptor, "libusb_free_ss_usb_device_capability_descriptor");

   function libusb_get_container_id_descriptor
     (ctx : System.Address;
      dev_cap : access libusb_bos_dev_capability_descriptor;
      container_id : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1349
   pragma Import (C, libusb_get_container_id_descriptor, "libusb_get_container_id_descriptor");

   procedure libusb_free_container_id_descriptor (container_id : access libusb_container_id_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1352
   pragma Import (C, libusb_free_container_id_descriptor, "libusb_free_container_id_descriptor");

   function libusb_get_bus_number (dev : System.Address) return stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:1354
   pragma Import (C, libusb_get_bus_number, "libusb_get_bus_number");

   function libusb_get_port_number (dev : System.Address) return stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:1355
   pragma Import (C, libusb_get_port_number, "libusb_get_port_number");

   function libusb_get_port_numbers
     (dev : System.Address;
      port_numbers : access stdint_h.uint8_t;
      port_numbers_len : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1356
   pragma Import (C, libusb_get_port_numbers, "libusb_get_port_numbers");

   function libusb_get_port_path
     (ctx : System.Address;
      dev : System.Address;
      path : access stdint_h.uint8_t;
      path_length : stdint_h.uint8_t) return int;  -- /usr/include/libusb-1.0/libusb.h:1358
   pragma Import (C, libusb_get_port_path, "libusb_get_port_path");

   function libusb_get_parent (dev : System.Address) return System.Address;  -- /usr/include/libusb-1.0/libusb.h:1359
   pragma Import (C, libusb_get_parent, "libusb_get_parent");

   function libusb_get_device_address (dev : System.Address) return stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:1360
   pragma Import (C, libusb_get_device_address, "libusb_get_device_address");

   function libusb_get_device_speed (dev : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1361
   pragma Import (C, libusb_get_device_speed, "libusb_get_device_speed");

   function libusb_get_max_packet_size (dev : System.Address; endpoint : unsigned_char) return int;  -- /usr/include/libusb-1.0/libusb.h:1362
   pragma Import (C, libusb_get_max_packet_size, "libusb_get_max_packet_size");

   function libusb_get_max_iso_packet_size (dev : System.Address; endpoint : unsigned_char) return int;  -- /usr/include/libusb-1.0/libusb.h:1364
   pragma Import (C, libusb_get_max_iso_packet_size, "libusb_get_max_iso_packet_size");

   function libusb_open (dev : System.Address; handle : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1367
   pragma Import (C, libusb_open, "libusb_open");

   procedure libusb_close (dev_handle : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1368
   pragma Import (C, libusb_close, "libusb_close");

   function libusb_get_device (dev_handle : System.Address) return System.Address;  -- /usr/include/libusb-1.0/libusb.h:1369
   pragma Import (C, libusb_get_device, "libusb_get_device");

   function libusb_set_configuration (dev : System.Address; configuration : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1371
   pragma Import (C, libusb_set_configuration, "libusb_set_configuration");

   function libusb_claim_interface (dev : System.Address; interface_number : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1373
   pragma Import (C, libusb_claim_interface, "libusb_claim_interface");

   function libusb_release_interface (dev : System.Address; interface_number : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1375
   pragma Import (C, libusb_release_interface, "libusb_release_interface");

   function libusb_open_device_with_vid_pid
     (ctx : System.Address;
      vendor_id : stdint_h.uint16_t;
      product_id : stdint_h.uint16_t) return System.Address;  -- /usr/include/libusb-1.0/libusb.h:1378
   pragma Import (C, libusb_open_device_with_vid_pid, "libusb_open_device_with_vid_pid");

   function libusb_set_interface_alt_setting
     (dev : System.Address;
      interface_number : int;
      alternate_setting : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1381
   pragma Import (C, libusb_set_interface_alt_setting, "libusb_set_interface_alt_setting");

   function libusb_clear_halt (dev : System.Address; endpoint : unsigned_char) return int;  -- /usr/include/libusb-1.0/libusb.h:1383
   pragma Import (C, libusb_clear_halt, "libusb_clear_halt");

   function libusb_reset_device (dev : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1385
   pragma Import (C, libusb_reset_device, "libusb_reset_device");

   function libusb_kernel_driver_active (dev : System.Address; interface_number : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1387
   pragma Import (C, libusb_kernel_driver_active, "libusb_kernel_driver_active");

   function libusb_detach_kernel_driver (dev : System.Address; interface_number : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1389
   pragma Import (C, libusb_detach_kernel_driver, "libusb_detach_kernel_driver");

   function libusb_attach_kernel_driver (dev : System.Address; interface_number : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1391
   pragma Import (C, libusb_attach_kernel_driver, "libusb_attach_kernel_driver");
